# silly

./: .gitignore  Cargo.toml  LICENSE
.github/: FUNDING.yml
.sqlx/: query-183c1c29501fec516baf3f53bee63e893de3dc442ebd66fb3b3fd94d6163c827.json  query-19dbb0aafcca202745cc48d77fc309ccc682d0e55962153162ebe5ce2417e8e2.json  query-418b9a63cd8c0608094e4e0946d5d982e8470907106ee8ae10eb414730803a27.json  query-43727d5763ef2105a48c45d0020bcfaf6770d3c785c9fb6131e5390b70860ea3.json  query-48a33ba16e5d85cedc68d802b4604aa749592ee419bf360b4642e83ab91f5b27.json  query-5f5857c3bb47139e5e2330aa183bbe20c63adba5d972c3fe04d8a1cff909c73f.json  query-ae1e7a25d06dc207d1c26419e87654a7e7cf160031cb28076ddf7b3c0097a47b.json  query-d6ca7c4b4999c404e6a6154bdd5960026dd591e31b532049fcfd87ce1e0a4358.json  query-dba111f30bcd548a1e838e7aa9163f9e7ac0ce43e8e117745d05d73335356035.json  query-ec397df07150a539f18043604e372479cc30dbe0be46bfeea1b5e691fa74a6a1.json
face/: .gitignore  components.json  eslint.config.js  package.json  svelte.config.js  tsconfig.json  vite.config.ts
face/src/: layout.css
face/src/assets/fonts/: SF-Pro-Text-Bold.css  SF-Pro-Text-BoldItalic.css  SF-Pro-Text-Heavy.css  SF-Pro-Text-Light.css  (+8 more)
face/src/lib/: system.ts
face/src/routes/: +error.svelte  +layout.svelte  +page.svelte
silly/: Cargo.toml
silly/migrations/: 20251227_init.sql
silly/src/: addrs.rs  api.rs  app.rs  cli.rs  db.rs  his.rs  logs.rs  main.rs  middleware.rs  web.rs
silly/src/aria2/: aria2.rs  mod.rs  proxy.rs  types.rs
silly/src/auth/: auth.rs  handler.rs  mod.rs  types.rs
silly/tests/: test.curl
(+14 files in other folders)
