[package]
name = "silly"
edition = "2024"
version = "0.1.0"
readme = "../README.md"
authors = ["@tribhuwan-kumar"]
license = "GNU GENERAL PUBLIC LICENSE V3"
keywords = ["aria2", "aria2-webui", "self-hosted", "server"]
repository = "https://github.com/tribhuwan-kumar/silly"


[dependencies]
url = "2.5.7"
dirs = "6.0.0"
time = "0.3.44"
rand = "0.9.2"
tracing = "0.1.43"
anyhow = "1.0.100"
dotenvy = "0.15.7"
if-addrs = "0.14.0"
mime_guess = "2.0.5"
rust-embed = "8.9.0"
urlencoding = "2.1.3"
async-trait = "0.1.89"
serde_json = "1.0.145"
futures-util = "0.3.31"
tracing-appender = "0.2.4"
argon2 = { version = "0.5.3", features = ["std"] }
tokio = { version = "1.48.0", features = ["full"] }
chrono = { version = "0.4.42", features = ["serde"]}
serde = { version = "1.0.228", features = ["derive"] }
axum-extra = {version = "0.12.5", features = ["cookie"]} 
axum = { version = "0.8.7", features = ["macros", "ws"] }
clap = { version = "4.5.53", features = ["derive", "env"] }
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-webpki-roots"] }
tower-http = { version = "0.6.8", features = ["fs", "cors", "trace", "set-header"] }
sqlx = { version = "0.8.6", features = [ "sqlite", "migrate", "macros", "runtime-tokio", "chrono" ]}

[[bin]]
name = "silly"
path = "src/main.rs"
